# docs/swagger.json
@@ -442,7 +442,8 @@
             "type": "object",
             "properties": {
                 "customer_id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 123
                 },
                 "products": {
                     "type": "array",
@@ -464,19 +465,18 @@
             "type": "object",
             "properties": {
                 "product_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
                 },
                 "quantity": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 2
                 }
             }
         },
         "dto.OrderItemResponse": {
             "type": "object",
             "properties": {
-                "price": {
-                    "type": "number"
-                },
                 "product_id": {
                     "type": "string"
                 },
@@ -520,14 +520,14 @@
                 "id": {
                     "type": "string"
                 },
-                "items": {
+                "payment_status": {
+                    "type": "string"
+                },
+                "products": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/dto.OrderItemResponse"
                     }
-                },
-                "payment_status": {
-                    "type": "string"
                 },
                 "status": {
                     "type": "string"
@@ -564,16 +564,20 @@
             "type": "object",
             "properties": {
                 "description": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "High-performance laptop"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Laptop"
                 },
                 "price": {
-                    "type": "number"
+                    "type": "number",
+                    "example": 999.99
                 },
                 "quantity": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 50
                 }
             }
         },
@@ -607,7 +611,8 @@
             "type": "object",
             "properties": {
                 "status": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "completed"
                 }
             }
         }
